# shorewall-nft

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HOWTO-CLAUDE.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yaml  test.yml
docs/: 6to4.xml  Accounting.xml  Actions.xml  Anatomy.xml  Anti-Spoofing.xml  Audit.xml  Build.xml  CompiledPrograms.xml  ConnectionRate.xml  Docker.xml  Documentation.xml  Documentation_Index.xml  Dynamic.xml  ECN.xml  Events.xml  FAQ.xml  FAQ_fr.xml  FTP.xml  FoolsFirewall.xml  GenericTunnels.xml  GettingStarted.xml  Helpers.xml  IPIP.xml  IPP2P.xml  IPSEC-2.6.xml  IPSEC.xml  IPv6Support.xml  ISO-3661.xml  Install.xml  Install_fr.xml  Internals.xml  Introduction.xml  KVM.xml  LXC.xml  Laptop.xml  LennyToSqueeze.xml  MAC_Validation.xml  Macros.xml  Manpages.xml  ManualChains.xml  (+82 more)
docs/architecture/: daemon-config.md  netns-fork.md
docs/cli/: commands.md  index.md  override-json.md  override-json.schema.json
docs/concepts/: Actions.md  Anatomy.md  Events.md  GettingStarted.md  Introduction.md  Macros.md  Manpages.md  ManualChains.md  Multiple_Zones.md  MyNetwork.md  NetfilterOverview.md  Shorewall_Doesnt.md  dynamic-routing.md  index.md  marks-and-connmark.md  multipath-and-ecmp.md  naming-and-layout.md  security-defaults.md  shorewall_features.md  shorewall_prerequisites.md
docs/features/: 6to4.md  Accounting.md  Anti-Spoofing.md  Audit.md  ConnectionRate.md  Docker.md  Dynamic.md  ECN.md  FTP.md  GenericTunnels.md  Helpers.md  IPIP.md  IPSEC-2.6.md  IPSEC.md  IPv6Support.md  KVM.md  LXC.md  Laptop.md  LennyToSqueeze.md  MAC_Validation.md  MultiISP.md  NAT.md  OPENVPN.md  PPTP.md  PacketHandling.md  PacketMarking.md  PortKnocking.md  ProxyARP.md  QOSExample.md  SharedConfig.md  Shorewall-Lite.md  Shorewall-init.md  Shorewall_Squid_Usage.md  Shorewall_and_Routing.md  SimpleBridge.md  SplitDNS.md  Universal.md  VPN.md  VPNBasics.md  dhcp.md  (+12 more)
docs/images/: Network2020.dia  docs-images-targetname
docs/legacy/: Anatomy_ru.md  CompiledPrograms.md  Documentation_Index.md  FAQ_fr.md  FoolsFirewall.md  IPP2P.md  Install_fr.md  MultiISP_ru.md  NewRelease.md  OpenVZ.md  ReleaseModel.md  Shorewall-4.md  Shorewall-5.md  Shorewall-perl.md  Shorewall_and_Aliased_Interfaces.md  Shorewall_and_Kazaa.md  UPnP.md  Vserver.md  XenMyWay-Routed.md  XenMyWay.md  blacklisting_support.md  blacklisting_support_ru.md  bridge-Shorewall-perl.md  bridge_fr.md  quotes.md  samba.md  shorewall_setup_guide_fr.md  standalone_fr.md  standalone_ru.md  support.md  survey-200603.md  three-interface_fr.md  three-interface_ru.md  traffic_shaping_ru.md  two-interface_fr.md  two-interface_ru.md  upgrade_issues.md  useful_links.md
docs/reference/: Build.md  FAQ.md  GnuCopyright.md  ISO-3661.md  Install.md  Internals.md  commands.json  configuration_file_basics.md  dependencies.md  features.json  glossary.md  index.md  kernel.md  shorewall_extension_scripts.md  shorewall_quickstart_guide.md  shorewall_setup_guide.md  shorewalld.md  standalone.md  starting_and_stopping_shorewall.md  test-index.json  three-interface.md  troubleshoot.md  two-interface.md
docs/releases/: unreleased.md
docs/roadmap/: HOWTO-CLAUDE-hw-offload-addition.md  hw-offload-eswitch.md  index.md  maintainability-audit-2026-04-24.md  nfset-map-bindings-todo.md  nfsets-deferred.md  phase6-coverage-plan.md  post-1.0-nft-features.md  pyroute2-audit-2026-04-24-final.md  pyroute2-audit-2026-04-24.md  rawnat-stateless-todo.md  shorewalld-log-dispatcher-todo.md  shorewalld.md  simlab-alignment-todo.md  simlab-dual-stack-merge.md
docs/shorewall-nft/: config-dirs.md  config-hash.md  debug.md  flowtable.md  index.md  merge-config.md  optimizer.md  plugin-development.md  plugins.md
docs/shorewalld/: index.md  keepalived-snmp.md  metrics.md  snmpd.conf.example
docs/testing/: debugging.md  fuzz.md  index.md  keepalived-dbus-api-inventory.md  keepalived-features-roadmap.md  perf-baseline.md  perl-vs-nft-flag-coverage.md  point-of-truth.md  reference-known-issues.md  security-test-plan.bsi.md  security-test-plan.bsi.yaml  security-test-plan.cc.md  security-test-plan.cc.yaml  security-test-plan.cis.md  security-test-plan.cis.yaml  security-test-plan.ipv6-perf.md  security-test-plan.ipv6-perf.yaml  security-test-plan.iso27001.md  security-test-plan.md  (+13 more)
examples/: README.md  plugins.conf
tools/: README.md  deploy.json.example  gen-keepalived-spec.sh  gen-rpm-spec.sh  gen_keepalived_mib.py  install-test-tooling.sh  marcant-deploy.env.example  merge-security-test-plan-yaml.py  merge-security-test-plan.py  reference-stage.sh  release.sh  run-netns  run-security-test-plan.sh  run-tests.sh  setup-remote-test-host.sh  setup-shorewalld-dnstap-smoke.sh  shorewall-compile.sh  simlab-collect.sh  simlab-raw-check.py  simlab-reference-loop.sh  simlab-report-diff.py  simlab-rerun-failed.py  simlab-verdict-counts.py  simulate-all-zones.sh  simulate-all.sh  stagelab-crash-agent.yaml.example  stagelab-crash-test.yaml.example  stagelab-dpdk-example.yaml.example  stagelab-env.example  stagelab-example-dpdk.yaml.example  stagelab-example-ha.yaml.example  stagelab-example-ipv6-throughput.yaml.example  stagelab-example-snmp.yaml.example  stagelab-fw-test-live.yaml.example  stagelab-lab-base.yaml.example  sudoers.d-shorewall-nft  tester02-downstream-setup.example  trex-ca.pem
(+75 files in other folders)
