# Monorepo root — not a real installable package.
# Each sub-package lives under packages/ and has its own pyproject.toml.
#
# Quick bootstrap:
#   pip install -e packages/shorewall-nft
#   pip install -e packages/shorewalld
#   pip install -e packages/shorewall-nft-simlab
#
# Or all at once (editable, development extras):
#   pip install -e 'packages/shorewall-nft[dev]' \
#               -e 'packages/shorewalld[dev]' \
#               -e 'packages/shorewall-nft-simlab[dev]'
#
# [build-system] and [project] exist solely so that pyproject-rpm-macros'
# auto-wheel hook (which always fires for any source tree with a
# pyproject.toml) can build a harmless empty wheel from the monorepo root
# without hitting setuptools' flat-layout guard.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shorewall-nft-monorepo"
version = "0.0.0"
description = "Monorepo root stub — not published"

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E701", "E731", "E741", "F601", "F841"]

[tool.ruff.lint.per-file-ignores]
# Tests have unconventional import patterns (late imports, semicolons for
# module-level constants, mixed stdlib+local ordering) — mirror the ignores
# that each per-package pyproject.toml already applies to its own tests/.
"**/tests/**" = ["E402", "E702", "I001"]
# Generated protobuf stubs — not human-authored, ignore all style rules.
"packages/shorewalld/shorewalld/proto/*_pb2.py" = ["E", "F", "I"]
